# rust-web

./: .dockerignore  .git-build-info.yaml  .gitignore  .tokeignore  Cargo.toml  Makefile  README.md  sqlx-data.json
backend/: .dockerignore  .env  .gitignore  .tokeignore  Cargo.toml  Makefile  configs_local.yaml  sqlx-data.json
backend/deployments/: Dockerfile  Dockerfile.alpine  backend.yaml  build-info.sh  build.sh  cargo_config.toml  cargo_vendor.toml  deploy.yaml  docker_build.sh  git-build-info.sh
backend/docs/: 00.NEXT.md  01.init_backend.md  02.database.md
configs/: local.yaml
deployments/: Dockerfile  Dockerfile-alpine  Dockerfile.backend  Dockerfile.cn  Dockerfile.frontend  Dockerfile.rust-musl  backend.yaml  build-alpine.df  build.df  build.sh  build_backend.sh  build_frontend.sh  build_rust_musl.sh  cargo_config.toml  deploy.sh  deploy.yaml  deploy_backend.sh  deploy_frontend.sh  docker-compose.yaml  docker_deploy.sh  git-build-info.sh  git_info.sh
docs/: 00.NEXT.md  01.init_project.md  02.database.md  03.container.md  04.init_frontend.md  Next.md
frontend/: .dockerignore  .gitignore  .tokeignore  Makefile  dependencies.json  package.json  react-build.sh
migrations/: 20230227092937_create_users_table.sql  20230302071002_alter_users_table.sql  20230304235900_alter_users_table.sql  20230306021434_create_tokens_table.sql
scripts/: 01.init.sh  01_init.sh  02.database.sh  PG_hello.expect
src/: git-build-info.yaml  lib.rs  main.rs
tests/: cargo_0.2.0.sh  curl_0.1.0.sh  curl_0.2.0.sh  health_check.rs  helpers.rs  tests.sh  tests_0.2.0.sh  user.rs
(+168 files in other folders)
