[package]
name = "rust-web"
version = "0.2.0"
edition = "2021"
description = "A rust web app"
repository = "https://github.com/d2jvkpn/rust-web"
license = "GPL v3"
default-run = "rust-web"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6"
actix-rt = "2"
actix-service = "2"
actix-web = "4"
anyhow = "1"
base64 = "0.21"
bcrypt = "0.14"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
derive_more = "0.99"
futures = "0.3"
futures-util = "0.3"
jsonwebtoken = "8"
log = "0.4"
log4rs = "1"
num_cpus = "1"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.6.2", features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline", "ipnetwork"] }
structopt = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.16" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex-literal = "0.3"
